--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    
+    <!-- Leaflet.markercluster -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-gray-50 h-screen flex flex-col overflow-hidden">
+<body class="bg-gray-50 min-h-screen flex flex-col">
 
     <!-- Header / Filters -->
     <header class="bg-white shadow-sm z-[1000] sticky top-0">
@@ -79,7 +84,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="flex-grow flex flex-col md:flex-row overflow-hidden">
+    <main class="flex-grow flex flex-col md:flex-row">
         <!-- Map View -->
         <div id="map" class="h-[40vh] md:h-full md:w-1/2 z-0"></div>
 
