--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body class="bg-gray-50 min-h-screen flex flex-col">
 
     <!-- Header / Filters -->
-    <header class="bg-white shadow-sm z-[1000] sticky top-0">
+    <header class="bg-white shadow-sm">
         <div class="max-w-7xl mx-auto px-4 py-4">
             <!-- Search -->
             <div class="relative mb-3">
@@ -61,12 +61,24 @@
                     placeholder="Buscar por título, descripción o etiquetas...">
             </div>
 
-            <!-- Category Filter -->
-            <div class="flex items-center gap-2">
-                <label
-                    class="text-xs font-semibold text-gray-500 uppercase tracking-wider shrink-0 hidden md:block">Categoría:</label>
-                <div id="category-filters" class="flex-grow">
-                    <!-- Dynamically populated -->
+            <!-- Category and Zone Filters -->
+            <div class="flex flex-col md:flex-row md:items-center gap-2">
+                <!-- Category Filter -->
+                <div class="flex items-center gap-2 flex-grow">
+                    <label
+                        class="text-xs font-semibold text-gray-500 uppercase tracking-wider shrink-0 hidden md:block">Categoría:</label>
+                    <div id="category-filters" class="flex-grow">
+                        <!-- Dynamically populated -->
+                    </div>
+                </div>
+                
+                <!-- Zone Filter -->
+                <div class="flex items-center gap-2">
+                    <label
+                        class="text-xs font-semibold text-gray-500 uppercase tracking-wider shrink-0 hidden md:block">Zona:</label>
+                    <div id="zone-filters" class="flex-grow md:w-auto">
+                        <!-- Dynamically populated -->
+                    </div>
                 </div>
             </div>
 
@@ -84,13 +96,13 @@
     </header>
 
     <!-- Main Content -->
-    <main class="flex-grow flex flex-col md:flex-row">
+    <main class="flex flex-col md:flex-row">
         <!-- Map View -->
-        <div id="map" class="h-[40vh] md:h-full md:w-1/2 z-0"></div>
+        <div id="map" class="h-[40vh] md:h-[60vh] md:w-1/2"></div>
 
         <!-- List View -->
         <div id="proposals-list-container"
-            class="h-[60vh] md:h-full md:w-1/2 overflow-y-auto bg-gray-50 border-t md:border-t-0 md:border-l border-gray-200 p-4">
+            class="h-[60vh] md:h-auto md:w-1/2 overflow-y-auto md:overflow-visible bg-gray-50 border-t md:border-t-0 md:border-l border-gray-200 p-4">
 
             <!-- Popular Tags Section -->
             <div id="popular-tags-section" class="mb-4 bg-white p-3 rounded-xl shadow-sm border border-gray-100">
