--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     <!-- Header / Filters -->
     <header class="bg-white shadow-sm">
         <div class="max-w-7xl mx-auto px-4 py-4">
+            <!-- Title -->
+            <div class="flex flex-col items-start md:flex-row md:items-center md:justify-between mb-3">
+                <h1 class="text-sm md:text-lg font-bold text-gray-900 leading-tight">Visor presupuestos participativos 2027</h1>
+                <div class="text-xs text-gray-500 mt-1 md:mt-0">
+                    Por <a href="https://aldeapucela.org" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Aldea Pucela</a>
+                </div>
+            </div>
+
             <!-- Search -->
             <div class="relative mb-3">
                 <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400">
@@ -62,9 +70,9 @@
             </div>
 
             <!-- Category and Zone Filters -->
-            <div class="flex flex-col md:flex-row md:items-center gap-2">
+            <div class="flex flex-row items-center gap-2">
                 <!-- Category Filter -->
-                <div class="flex items-center gap-2 flex-grow">
+                <div class="flex items-center gap-2 flex-1 min-w-0">
                     <label
                         class="text-xs font-semibold text-gray-500 uppercase tracking-wider shrink-0 hidden md:block">Categoría:</label>
                     <div id="category-filters" class="flex-grow">
@@ -73,7 +81,7 @@
                 </div>
                 
                 <!-- Zone Filter -->
-                <div class="flex items-center gap-2">
+                <div class="flex items-center gap-2 flex-1 min-w-0">
                     <label
                         class="text-xs font-semibold text-gray-500 uppercase tracking-wider shrink-0 hidden md:block">Zona:</label>
                     <div id="zone-filters" class="flex-grow md:w-auto">
@@ -123,6 +131,18 @@
             </div>
         </div>
     </main>
+
+    <footer class="mt-auto border-t border-gray-200 bg-white">
+        <div class="max-w-7xl mx-auto px-4 py-4 text-xs text-gray-500 flex flex-col gap-2 md:flex-row md:items-center md:justify-between">
+            <div class="flex flex-wrap items-center gap-x-3 gap-y-1">
+                <a href="LICENSE" class="hover:text-gray-700 underline underline-offset-2">Licencia</a>
+                <a href="LICENSE-DATA" class="hover:text-gray-700 underline underline-offset-2">Licencia de datos</a>
+            </div>
+            <div>
+                <a href="https://aldeapucela.org" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">aldeapucela.org</a>
+            </div>
+        </div>
+    </footer>
 
     <!-- JS Scripts -->
     <script type="module" src="src/main.js"></script>
