--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <footer class="mt-auto border-t border-gray-200 bg-white">
         <div class="max-w-7xl mx-auto px-4 py-4 text-xs text-gray-500 flex flex-col gap-2 md:flex-row md:items-center md:justify-between">
             <div class="flex flex-wrap items-center gap-x-3 gap-y-1">
-                <a href="LICENSE" class="hover:text-gray-700 underline underline-offset-2">Licencia</a>
-                <a href="LICENSE-DATA" class="hover:text-gray-700 underline underline-offset-2">Licencia de datos</a>
+                <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Licencia</a>
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Licencia de datos</a>
             </div>
             <div>
                 <a href="https://aldeapucela.org" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">aldeapucela.org</a>
