--- a/index.html
+++ b/index.html
@@ -85,8 +85,13 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </span>
                 <input type="text" id="search-input"
-                    class="block w-full pl-10 pr-3 py-3 border border-gray-300 rounded-xl leading-5 bg-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 text-sm transition duration-150 ease-in-out shadow-sm"
+                    class="block w-full pl-10 pr-20 py-3 border border-gray-300 rounded-xl leading-5 bg-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 text-sm transition duration-150 ease-in-out shadow-sm"
                     placeholder="Buscar por título, descripción o etiquetas...">
+                <button id="share-search-btn" 
+                    class="absolute inset-y-0 right-0 px-3 flex items-center text-gray-400 hover:text-indigo-600 transition-colors"
+                    title="Compartir búsqueda">
+                    <i class="fa-solid fa-share-nodes"></i>
+                </button>
             </div>
 
             <!-- Category and Zone Filters -->
@@ -118,6 +123,11 @@
                     <div id="active-tags" class="flex flex-wrap gap-1.5">
                         <!-- Dynamically populated -->
                     </div>
+                    <button id="share-filters-btn" 
+                        class="text-xs text-indigo-600 hover:text-indigo-800 font-semibold transition-colors"
+                        title="Compartir filtros">
+                        <i class="fa-solid fa-share-nodes mr-1"></i>Compartir
+                    </button>
                 </div>
             </div>
         </div>
