--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <div class="flex flex-wrap items-center gap-x-3 gap-y-1">
                 <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Licencia</a>
                 <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Licencia de datos</a>
+                <a href="https://github.com/aldeapucela/participativos2027" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">Código</a>
             </div>
             <div>
                 <a href="https://aldeapucela.org" target="_blank" rel="noopener noreferrer" class="hover:text-gray-700 underline underline-offset-2">aldeapucela.org</a>
