--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
     <!-- JS Scripts -->
     <script type="module" src="src/main.js"></script>
+    <script src="src/stats.js"></script>
 </body>
 
 </html>
