Fix scroll de mapa y propuestas

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
         </div>
     </footer>
 
+    <button id="show-map-btn" class="hidden bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-semibold px-4 py-2 rounded-full fixed bottom-4 right-4 md:hidden">
+        <i class="fa-solid fa-map mr-2"></i>Mostrar mapa
+    </button>
+
     <!-- JS Scripts -->
     <script type="module" src="src/main.js"></script>
     <script src="src/stats.js"></script>
